Check if slot is in a shadow tree before building its distributed nodes

If you open a page with a slot that's not under a shadow tree
and try to inspect that slot, it will crash because of a DCHECK
when trying to build distributed nodes for that slot.

Solution: Added a condition to check whether a slot is in a shadow tree
or not before building distributed nodes for that slot.

Bug: 715033
Change-Id: Ic778c1ebff95d6a035d2bb53932ac50761357beb
Reviewed-on: https://chromium-review.googlesource.com/715976
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Reviewed-by: Takayoshi Kochi <kochi@chromium.org>
Commit-Queue: Rakina Amni <rakina@chromium.org>
Cr-Commit-Position: refs/heads/master@{#508985}